tests/ui-fulldeps/session-diagnostic/diagnostic-derive-doc-comment-field.stderr
error[E0277]: the trait bound `NotIntoDiagArg: IntoDiagArg` is not satisfied
  --> $DIR/diagnostic-derive-doc-comment-field.rs:36:10
   |
LL | #[derive(Diagnostic)]
   |          ---------- required by a bound introduced by this call
...
LL |     arg: NotIntoDiagArg,
   |          ^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoDiagArg` is not implemented for `NotIntoDiagArg`
  --> $DIR/diagnostic-derive-doc-comment-field.rs:28:1
   |
LL | struct NotIntoDiagArg;
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: normalized in stderr
note: required by a bound in `Diag::<'a, G>::arg`
  --> $COMPILER_DIR/rustc_errors/src/diagnostic.rs:LL:CC
   = note: this error originates in the macro `with_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotIntoDiagArg: IntoDiagArg` is not satisfied
  --> $DIR/diagnostic-derive-doc-comment-field.rs:46:10
   |
LL | #[derive(Subdiagnostic)]
   |          ------------- required by a bound introduced by this call
...
LL |     arg: NotIntoDiagArg,
   |          ^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoDiagArg` is not implemented for `NotIntoDiagArg`
  --> $DIR/diagnostic-derive-doc-comment-field.rs:28:1
   |
LL | struct NotIntoDiagArg;
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: normalized in stderr
note: required by a bound in `Diag::<'a, G>::arg`
  --> $COMPILER_DIR/rustc_errors/src/diagnostic.rs:LL:CC
   = note: this error originates in the macro `with_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
